<resources>
    <string name="app_name">PokéDB</string>
    <string name="title_pokedex">Pokedex</string>
    <string name="title_teams">Teams</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_moves">Moves</string>
    <string name="menu_abilities">Abilities</string>
    <string name="menu_items">Items</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_natures">Natures</string>
    <string name="menu_type_chart">Type Chart</string>
    <string name="menu_iv_calculator">IV Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help_and_feedback"><![CDATA[Help & Feedback]]></string>
</resources>
